FindBugs: Potentially dangerous use of non-short-circuit logic